crates/biome_yaml_formatter/tests/specs/prettier/yaml/spec/block-sequence-in-block-mapping.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/spec/block-sequence-in-block-mapping.yml
---

# Input

```yml
key:
 - item1
 - item2

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
block-sequence-in-block-mapping.yml:3:2 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a block mapping entry but instead found '- item2'.
  
    1 │ key:
    2 │   - item1
  > 3 │  - item2
      │  ^^^^^^^
    4 │ 
  
  i Expected a block mapping entry here.
  
    1 │ key:
    2 │   - item1
  > 3 │  - item2
      │  ^^^^^^^
    4 │ 
  

```
